[gd_scene load_steps=15 format=3 uid="uid://xqlx26ht07gn"]

[ext_resource type="Script" path="res://UI/robot_shop.gd" id="1_2yh61"]
[ext_resource type="FontFile" uid="uid://wkorqfm7fonm" path="res://font/Bungee-Regular.ttf" id="2_j2y6y"]
[ext_resource type="Texture2D" uid="uid://bj4opvhpaxg1o" path="res://Assets/Resources/Potato/potato2.png" id="3_054f0"]
[ext_resource type="Texture2D" uid="uid://ct7g8dtxrc235" path="res://Assets/Robots/planter.png" id="3_ux3oh"]
[ext_resource type="Texture2D" uid="uid://b0umr7umgmxnd" path="res://Assets/Resources/Scrap/scrap1.png" id="4_8jj0w"]
[ext_resource type="Texture2D" uid="uid://bal8n0is5gcql" path="res://Assets/Robots/harvester.png" id="6_b13q0"]
[ext_resource type="Texture2D" uid="uid://dw1yxfyh0olx8" path="res://Assets/Robots/collector.png" id="7_wa0y2"]
[ext_resource type="Texture2D" uid="uid://ceaadsd8bpaj8" path="res://Assets/Robots/scavenger.png" id="8_yhyt8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ju33a"]
bg_color = Color(0.141176, 0.0901961, 0.00392157, 0.980392)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.184314, 0.133333, 0.0117647, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id="Theme_4w2fm"]
default_font = ExtResource("2_j2y6y")
default_font_size = 50

[sub_resource type="Theme" id="Theme_55hee"]
default_font = ExtResource("2_j2y6y")

[sub_resource type="SystemFont" id="SystemFont_810cx"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jude"]
bg_color = Color(0.156863, 0.156863, 0.156863, 0.980392)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdrw7"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="robot_shop" type="CanvasLayer"]
script = ExtResource("1_2yh61")

[node name="potato" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ju33a")

[node name="BUY" type="MarginContainer" parent="potato"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -695.0
offset_top = -311.0
offset_right = 695.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="robots" type="HBoxContainer" parent="potato/BUY"]
layout_mode = 2
theme_override_constants/separation = 160
alignment = 1

[node name="Planter" type="VBoxContainer" parent="potato/BUY/robots"]
layout_mode = 2
theme = SubResource("Theme_4w2fm")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="potato/BUY/robots/Planter"]
layout_mode = 2
text = "Planter "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="potato/BUY/robots/Planter"]
custom_minimum_size = Vector2(314, 314)
layout_mode = 2
texture = ExtResource("3_ux3oh")
expand_mode = 4
stretch_mode = 5

[node name="Label2" type="Label" parent="potato/BUY/robots/Planter"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Plants potatoes 
on empty plots"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="potato/BUY/robots/Planter"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[Average Speed]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="potato/BUY/robots/Planter"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[Average Productivity]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price" type="HBoxContainer" parent="potato/BUY/robots/Planter"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="potatoPrice" type="Label" parent="potato/BUY/robots/Planter/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="potatoIcon" type="TextureRect" parent="potato/BUY/robots/Planter/Price"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="scrapPrice" type="Label" parent="potato/BUY/robots/Planter/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="scrapIcon" type="TextureRect" parent="potato/BUY/robots/Planter/Price"]
layout_mode = 2
texture = ExtResource("4_8jj0w")
expand_mode = 3
stretch_mode = 5

[node name="upkeep" type="HBoxContainer" parent="potato/BUY/robots/Planter"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="upkeepLabel" type="Label" parent="potato/BUY/robots/Planter/upkeep"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upkeep	    60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upkeepIcon" type="TextureRect" parent="potato/BUY/robots/Planter/upkeep"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="planterBuyButton" type="Button" parent="potato/BUY/robots/Planter"]
layout_mode = 2
text = "Build"

[node name="Harvester" type="VBoxContainer" parent="potato/BUY/robots"]
layout_mode = 2
theme = SubResource("Theme_4w2fm")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="potato/BUY/robots/Harvester"]
layout_mode = 2
text = "Harvester "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="potato/BUY/robots/Harvester"]
modulate = Color(0.290196, 0.427451, 0.886275, 1)
custom_minimum_size = Vector2(314, 314)
layout_mode = 2
texture = ExtResource("6_b13q0")
stretch_mode = 5

[node name="Label2" type="Label" parent="potato/BUY/robots/Harvester"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Harvests potatoes 
on fully grown plots"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="potato/BUY/robots/Harvester"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[Slow speed]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="potato/BUY/robots/Harvester"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[High productivity]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price" type="HBoxContainer" parent="potato/BUY/robots/Harvester"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="potatoPrice" type="Label" parent="potato/BUY/robots/Harvester/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="potatoIcon" type="TextureRect" parent="potato/BUY/robots/Harvester/Price"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="scrapPrice" type="Label" parent="potato/BUY/robots/Harvester/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="scrapIcon" type="TextureRect" parent="potato/BUY/robots/Harvester/Price"]
layout_mode = 2
texture = ExtResource("4_8jj0w")
expand_mode = 3
stretch_mode = 5

[node name="upkeep" type="HBoxContainer" parent="potato/BUY/robots/Harvester"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="upkeepLabel" type="Label" parent="potato/BUY/robots/Harvester/upkeep"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upkeep	    60
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upkeepIcon" type="TextureRect" parent="potato/BUY/robots/Harvester/upkeep"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="harvesterBuyButton" type="Button" parent="potato/BUY/robots/Harvester"]
layout_mode = 2
text = "Build"

[node name="Collector" type="VBoxContainer" parent="potato/BUY/robots"]
layout_mode = 2
theme = SubResource("Theme_4w2fm")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="potato/BUY/robots/Collector"]
layout_mode = 2
text = "Collector"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="potato/BUY/robots/Collector"]
modulate = Color(0.776471, 0.462745, 0.894118, 1)
custom_minimum_size = Vector2(314, 314)
layout_mode = 2
texture = ExtResource("7_wa0y2")
expand_mode = 4
stretch_mode = 5

[node name="Label2" type="Label" parent="potato/BUY/robots/Collector"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Autonomously
collects potatoes "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="potato/BUY/robots/Collector"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[snail Speed]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="potato/BUY/robots/Collector"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[Enormous Capacity]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price" type="HBoxContainer" parent="potato/BUY/robots/Collector"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="potatoPrice" type="Label" parent="potato/BUY/robots/Collector/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="potatoIcon" type="TextureRect" parent="potato/BUY/robots/Collector/Price"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="scrapPrice" type="Label" parent="potato/BUY/robots/Collector/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="scrapIcon" type="TextureRect" parent="potato/BUY/robots/Collector/Price"]
layout_mode = 2
texture = ExtResource("4_8jj0w")
expand_mode = 3
stretch_mode = 5

[node name="upkeep" type="HBoxContainer" parent="potato/BUY/robots/Collector"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="upkeepLabel" type="Label" parent="potato/BUY/robots/Collector/upkeep"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upkeep	    60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upkeepIcon" type="TextureRect" parent="potato/BUY/robots/Collector/upkeep"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="collectorBuyButton" type="Button" parent="potato/BUY/robots/Collector"]
layout_mode = 2
text = "Build"

[node name="CLOSE" type="MarginContainer" parent="potato"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_top = 25.0
offset_right = -49.0
offset_bottom = 111.0
grow_horizontal = 0
theme = SubResource("Theme_55hee")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="close_button" type="Button" parent="potato/CLOSE"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_810cx")
theme_override_font_sizes/font_size = 30
text = "X"

[node name="scrap" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -400.0
offset_right = 800.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jude")

[node name="BUY" type="MarginContainer" parent="scrap"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -695.0
offset_top = -311.0
offset_right = 695.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="robots" type="HBoxContainer" parent="scrap/BUY"]
layout_mode = 2
theme_override_constants/separation = 160
alignment = 1

[node name="Scavenger" type="VBoxContainer" parent="scrap/BUY/robots"]
layout_mode = 2
theme = SubResource("Theme_4w2fm")
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="scrap/BUY/robots/Scavenger"]
layout_mode = 2
text = "Scavenger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="scrap/BUY/robots/Scavenger"]
modulate = Color(0.313726, 0.223529, 0, 1)
custom_minimum_size = Vector2(314, 314)
layout_mode = 2
texture = ExtResource("8_yhyt8")
stretch_mode = 5

[node name="Label2" type="Label" parent="scrap/BUY/robots/Scavenger"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Finds and collects
Scrap"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="scrap/BUY/robots/Scavenger"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[rapid Speed]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="scrap/BUY/robots/Scavenger"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[Tiny Capacity]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price" type="HBoxContainer" parent="scrap/BUY/robots/Scavenger"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="potatoPrice" type="Label" parent="scrap/BUY/robots/Scavenger/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="potatoIcon" type="TextureRect" parent="scrap/BUY/robots/Scavenger/Price"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="scrapPrice" type="Label" parent="scrap/BUY/robots/Scavenger/Price"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "200"
horizontal_alignment = 2
vertical_alignment = 1

[node name="scrapIcon" type="TextureRect" parent="scrap/BUY/robots/Scavenger/Price"]
layout_mode = 2
texture = ExtResource("4_8jj0w")
expand_mode = 3
stretch_mode = 5

[node name="upkeep" type="HBoxContainer" parent="scrap/BUY/robots/Scavenger"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="upkeepLabel" type="Label" parent="scrap/BUY/robots/Scavenger/upkeep"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Upkeep	    60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upkeepIcon" type="TextureRect" parent="scrap/BUY/robots/Scavenger/upkeep"]
layout_mode = 2
texture = ExtResource("3_054f0")
expand_mode = 3
stretch_mode = 5

[node name="scavengerBuyButton" type="Button" parent="scrap/BUY/robots/Scavenger"]
layout_mode = 2
text = "Build"

[node name="CLOSE" type="MarginContainer" parent="scrap"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -166.0
offset_top = 25.0
offset_right = -49.0
offset_bottom = 111.0
grow_horizontal = 0
theme = SubResource("Theme_55hee")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="close_button" type="Button" parent="scrap/CLOSE"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_810cx")
theme_override_font_sizes/font_size = 30
text = "X"

[node name="potatoButton" type="Button" parent="."]
offset_left = 57.0
offset_top = 418.0
offset_right = 81.0
offset_bottom = 442.0
scale = Vector2(4, 4)
keep_pressed_outside = true
icon = ExtResource("3_054f0")

[node name="scrapButton" type="Button" parent="."]
offset_left = 57.0
offset_top = 520.0
offset_right = 81.0
offset_bottom = 544.0
scale = Vector2(4, 4)
keep_pressed_outside = true
icon = ExtResource("4_8jj0w")

[node name="totalUpkeep" type="Label" parent="."]
visible = false
offset_left = -159.0
offset_top = 23.0
offset_right = -92.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_tdrw7")
text = "UPKEEP:
0   ->   60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buyTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[connection signal="mouse_entered" from="potato/BUY/robots/Planter/planterBuyButton" to="." method="_on_planter_buy_button_mouse_entered"]
[connection signal="mouse_exited" from="potato/BUY/robots/Planter/planterBuyButton" to="." method="_on_planter_buy_button_mouse_exited"]
[connection signal="pressed" from="potato/BUY/robots/Planter/planterBuyButton" to="." method="_on_planter_buy_button_pressed"]
[connection signal="mouse_entered" from="potato/BUY/robots/Harvester/harvesterBuyButton" to="." method="_on_harvester_buy_button_mouse_entered"]
[connection signal="mouse_exited" from="potato/BUY/robots/Harvester/harvesterBuyButton" to="." method="_on_harvester_buy_button_mouse_exited"]
[connection signal="pressed" from="potato/BUY/robots/Harvester/harvesterBuyButton" to="." method="_on_harvester_buy_button_pressed"]
[connection signal="mouse_entered" from="potato/BUY/robots/Collector/collectorBuyButton" to="." method="_on_collector_buy_button_mouse_entered"]
[connection signal="mouse_exited" from="potato/BUY/robots/Collector/collectorBuyButton" to="." method="_on_collector_buy_button_mouse_exited"]
[connection signal="pressed" from="potato/BUY/robots/Collector/collectorBuyButton" to="." method="_on_collector_buy_button_pressed"]
[connection signal="pressed" from="potato/CLOSE/close_button" to="." method="_on_close_button_pressed"]
[connection signal="mouse_entered" from="scrap/BUY/robots/Scavenger/scavengerBuyButton" to="." method="_on_scavenger_buy_button_mouse_entered"]
[connection signal="mouse_exited" from="scrap/BUY/robots/Scavenger/scavengerBuyButton" to="." method="_on_scavenger_buy_button_mouse_exited"]
[connection signal="pressed" from="scrap/BUY/robots/Scavenger/scavengerBuyButton" to="." method="_on_scavenger_buy_button_pressed"]
[connection signal="pressed" from="scrap/CLOSE/close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="potatoButton" to="." method="_on_potato_button_pressed"]
[connection signal="pressed" from="scrapButton" to="." method="_on_scrap_button_pressed"]
[connection signal="timeout" from="buyTimer" to="." method="_on_buy_timer_timeout"]
